--- a/css/style.css
+++ b/css/style.css
@@ -16,42 +16,47 @@ of mistakes and you might even find it a mess.
   font-size: 1.3em;
 
   display: grid;
-  width: 100%;
-  height: 100vh;
-  grid-template-columns: 1fr, 90% , 1fr;
+  grid-template-columns: 1fr 5fr 1fr;
   grid-template-rows: auto;
-  grid-gap: 1rem;
+  grid-gap: 2rem;
   grid-template-areas:
-    "nav main_content right_bio";
+  	"header header header"
+    "nav main_content right_bio"
 }
 .main_content {
    margin: 0 auto;
-   width: 60%;
-   max-width: 600%;
-   margin-top: 20%;
-
+   margin-top: 10%;
    grid-area: main_content;
 }
 h1 {
   text-align: center;
 /*  margin-left: 30rem;  with this the centering is happening but the whole thing moves*/
+  grid-area: header;
  }
 .nav {
   margin-left: 10%;
   grid-area: nav;
-  background-color: grey;
+}
+
+.nav ul {
+  list-style-type: none;
+}
+
+.nav a {
+	text-decoration: none;
+	color: black;
 }
 .right_bio{
   grid-area: right_bio;
-  margin-top: 20%;
+  margin-top: 10%;
   margin-left: 0;
 }
 img{
-  width: 10em;
+  width: 100%;
   height: auto;
 }
 body{
-  background-image: image(img/HP_castle.jpeg);  /*i was trying to put a banner with this
+  background-image: url("img/HP_castle.jpg");  /*i was trying to put a banner with this
   so ignore*/
 }
 /*even thought i was trying to copy the thing it doesnt look like its suppose to.*/
