--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
 dont expect the CSS to be perfect or even totslly right i feel there will be a lot
 of mistakes and you might even find it a mess.
 */
+@font-face {
+    font-family: harry-p;
+    src:url("fonts/HARRYP__.TTF");
+}
+
 * {
   margin:0;
   padding: 0;
@@ -26,23 +31,47 @@ of mistakes and you might even find it a mess.
    margin-top: 10%;
    grid-area: main_content;
 }
-h1 {
+.main-header {
   text-align: center;
-/*  margin-left: 30rem;  with this the centering is happening but the whole thing moves*/
   grid-area: header;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background-image: url("../img/HP_castle.jpg");
+  background-size: cover;
+ }
+
+ .main-header h1 {
+     font-family: harry-p;
+     font-size: 10em;
+     color: black;
+     text-shadow: 3px 4px 1px white;
  }
 .nav {
   margin-left: 10%;
   grid-area: nav;
+  background-color: black;
+  padding: 2rem;
 }
 
 .nav ul {
   list-style-type: none;
 }
 
+.nav ul li {
+    border-bottom: 1px solid white;
+    margin-top: 0.5em;
+}
+
 .nav a {
 	text-decoration: none;
-	color: black;
+	color: white;
+}
+
+.nav a:hover {
+    color: yellow;
 }
 .right_bio{
   grid-area: right_bio;
@@ -53,8 +82,3 @@ img{
   width: 100%;
   height: auto;
 }
-body{
-  background-image: url("../img/HP_castle.jpg");
-  background-size: cover;
-}
-/*even thought i was trying to copy the thing it doesnt look like its suppose to.*/
