--- a/css/style.css
+++ b/css/style.css
@@ -36,16 +36,18 @@ ul li {
   font-size: 1.3em;
 
   display: grid;
-  grid-template-columns: 1fr 5fr 1fr;
+  grid-template-columns: 5fr 1fr;
   grid-template-rows: auto;
   grid-gap: 2rem;
   grid-template-areas:
-  	"header header header"
-    "nav main_content right_bio"
+  	"header header"
+    "nav nav"
+    "main_content right_bio";
 }
 .main_content {
    margin: 0 auto;
    margin-top: 10%;
+   margin-left: 10rem;
    grid-area: main_content;
 }
 
@@ -75,18 +77,19 @@ ul li {
      color: black;
      text-shadow: 3px 4px 1px white;
  }
+
 .nav {
   margin-left: 10%;
   grid-area: nav;
-  background-color: black;
-  padding: 2rem;
+  background-color: grey;
+  padding: 2rem 30rem;
 }
 
 .nav ul {
   list-style-type: none;
 }
 
-.nav ul li {
+.nav  {
     border-bottom: 1px solid white;
     margin-top: 0.5em;
 }
@@ -117,4 +120,14 @@ img{
 }
 table {
   border-spacing: 1rem;
+}
+.nav {
+  display: flex;
+  justify-content: space-around;
+  border: 1px solid #fff;
+  width: 900px;
+  margin-left: 2rem;
+  text-align: center;
+  flex-wrap: wrap;
+  position: sticky;
 }
