--- a/css/style.css
+++ b/css/style.css
@@ -60,7 +60,7 @@ aside {
   font-family: sans-serif;
   background-color: black;
   color: white;
-  
+
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -75,7 +75,7 @@ aside {
   color: white;
 }
 
-/* 
+/*
 NAVIGATION ENDS ABOVE
 */
 
@@ -94,24 +94,26 @@ CONTAINER BEGINS HERE
 
 .main_content {
   grid-area: main-content;
-  font-family: Cinzel;
+  font-family: Alegreya;
   font-size: 2rem;
   padding: 2em;
 }
 
 .right_bio {
   grid-area: suppliment;
-  font-family: Alegreya;
+  font-family: Cinzel;
   font-size: 1rem;
   padding: 1em;
 }
-
-
+.grey_font{
+  color: grey;
+}
+/* Responsive web*/
 @media only screen and (max-width: 600px) {
   .main-header {
     height: 50vh;
   }
-  
+
   .main-header h1{
     font-size: 8rem;
   }
@@ -119,48 +121,39 @@ CONTAINER BEGINS HERE
     display: flex;
     flex-direction: column;
   }
-  
+
   .main_content {
     font-size: 1.6rem;
     padding: 0;
     margin: 0.5em;
   }
-  
+
   .right_bio {
     font-size: 1rem;
     padding: 0;
     margin: 0.5em;
   }
-  
+
   .right_bio img{
     width: 100%;
   }
-  
+
   p {
     margin-top: 2em;
   }
-  
-} 
-/* 
-Okay how do you feel of this design? its good enough.
-Yes it is good enough but the side table is kind of annoying.
-It is taking the whole right column but whatever.
-I want to show you something right now.
-Is the display of this project in a new tab? yes.
-right click and on that select "Inspect Element"
-right click on the display oka
-now do you see a developer tools popped up below? yes.
-to the top right of developers tools you will see an icon of mobile
-if you hover over it you will see Responsive Design Mode yes
-Our website doesn't look good on mobile.
-Lets start to add a media query. ok. 
-order also i guess.
-Yes I have changed the order. I have sent the right column to the buttom.
-and the main introduction to the top.
-We just have to fix font-size
-Yes we must have a fix font-size for an HTML element which is 62.5%;
-but then we can change the font-size using media queries based 
-on the device we are targeting.
-For mobile you have to change the font size to something lower
-ok. 
-*/
+
+}
+/* container ends*/
+
+/*img setting starts*/
+.img1{
+  width: 25em;
+  height: auto;
+  float: right;
+  padding-left: 3em;
+  padding-bottom: 1em;
+}
+.img2{
+  float: right; /* not working img from publication_history*/
+}
+/*img setting ends*/
